# MLOps_Stat

./: LICENSE  Makefile  README.md  pyproject.toml
MLOps_Course/: dataset.py  plots.py
MLOps_Course/modeling/: predict.py
docs/: mkdocs.yml
docs/docs/: index.md
src/: features.py
src/modeling/: train.py
